# analise-energia-CCEE

./: LICENSE  README.md  dados.ipynb  pyproject.toml
dashboard/: main.py
projeto1/: pyproject.toml
