[tool.poetry]
name = "ccee-energy-consumption-analysis"
version = "0.1.0"
description = "\"Análise exploratória do consumo de energia elétrica no Brasil utilizando dados públicos da CCEE, com foco em identificar padrões temporais e regionais por meio de visualizações em Python.\""
authors = ["Bruno Ap C Pessoa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.0.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
